# eccommerce-api

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: deploy.yml
migrations/2025-01-10-233145_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/handlers/: user_handler.rs
src/handlers/user_handler/: auth.rs  users.rs
src/models/: user_model.rs
src/services/auth/: create_user.rs
src/utils/: error_handler.rs
