[package]
name = "auth_flow"
version = "0.1.0"
edition = "2021"
description = "An e-commerce API built with Rust and Actix-Web"
license = "MIT"
authors = ["Raji Olaoluwa <rajiolaoluwa0@gmail.com>"]
repository = "https://github.com/stephcodess/eccommerce-api"
keywords = ["ecommerce", "api", "rust", "actix"]
categories = ["web-programming", "api-bindings"]

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
regex = "1.11.1"
derive_more = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
shuttle-actix-web = "0.49"
shuttle-runtime = "0.49"
tokio = "1"


[profile.release]
lto = true
